--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2"
+        "php": "^7.2",
+        "slim/slim": "^4.2.0",
+        "php-di/invoker": "^2.0",
+        "illuminate/container": "^7.23"
     },
     "autoload": {
         "psr-4": {
