--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2",
+        "php": ">=7.3.0",
         "slim/slim": "^4.2.0",
         "php-di/invoker": "^2.0",
-        "illuminate/container": "^7.23"
+        "illuminate/container": "^7.23 | ^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -23,6 +23,6 @@
         }
     },
     "require-dev": {
-        "vimeo/psalm": "^3.13"
+        "vimeo/psalm": "^4.6"
     }
 }
