--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,10 @@
     },
     "require-dev": {
         "vimeo/psalm": "^4.6"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     }
 }
