--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.3.0 || ~8.0.0 || ~8.1.0",
+        "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "slim/slim": "^4.2.0",
         "php-di/invoker": "^2.0",
         "illuminate/container": "^7.23 || ^8.0"
